USB DAQ/USB-1901/C_C++/1901AIPoll/usbdask.h

    /*
     * DASK Data Types
     */
    typedef unsigned char  U8;
    typedef short          I16;
    typedef unsigned short U16;
    typedef unsigned long  U32;
    typedef double         F64;
    I16 __stdcall UD_AI_AsyncBufferTransfer ( USHORT wCardNumber, USHORT *pwBuffer, \
            U32 offset, U32 count );
    I16 __stdcall UD_AI_2401_Stop_Poll ( USHORT wCardNumber );
                                            
    /*----------------------------------------------------------------------------*/
    /* AO Function */

    I16 __stdcall UD_AO_1902_Config ( U16 CardNumber, U16 ConfigCtrl, U16 TrigCtrl, \
                                      U32 ReTrgCnt, U32 DLY1Cnt, U32 DLY2Cnt );
    I16 __stdcall UD_AO_AsyncCheck ( U16 CardNumber, BOOLEAN *Stopped, U32 *AccessCnt );
    I16 __stdcall UD_AO_AsyncClear ( U16 CardNumber, U32 *AccessCnt, U16 stop_mode );
    I16 __stdcall UD_AO_AsyncDblBufferHalfReady ( U16 CardNumber, BOOLEAN *bHalfReady );
    I16 __stdcall UD_AO_AsyncDblBufferTransfer ( U16 wCardNumber, USHORT wBufferID, USHORT *pwBuffer );
    I16 __stdcall UD_AO_AsyncDblBufferMode ( U16 CardNumber, BOOLEAN Enable, BOOLEAN bEnFifoMode );
    I16 __stdcall UD_AO_ContBufferCompose ( U16 CardNumber, U16 TotalChnCount, \
                                            U16 ChnNum, U32 UpdateCount, void *ConBuffer, void *Buffer );
    I16 __stdcall UD_AO_ContWriteChannel ( U16 CardNumber, U16 Channel,   VOID *pAOBuffer, \
                                           U32 WriteCount, U32 Iterations, U32 CHUI, U16 definite, U16 SyncMode );
    I16 __stdcall UD_AO_ContWriteMultiChannels ( U16 CardNumber, U16 NumChans, \
            U16 *Chans, VOID *pAOBuffer, U32 WriteCount, U32 Iterations, U32 CHUI, \
            U16 definite, U16 SyncMode );
    I16 __stdcall UD_AO_InitialMemoryAllocated ( U16 CardNumber, U32 *MemSize );
    I16 __stdcall UD_AO_SetTimeOut ( U16 CardNumber, U32 TimeOut );
    I16 __stdcall UD_AO_VWriteChannel ( U16 CardNumber, U16 Channel, F64 Voltage );
    I16 __stdcall UD_AO_WriteChannel ( U16 CardNumber, U16 Channel, I16 Value );
    I16 __stdcall UD_AO_VoltScale ( U16 CardNumber, U16 Channel, F64 Voltage, \
                                    I16 *binValue );
                                      
    I16 __stdcall UD_AO_EventCallBack ( U16 CardNumber, I16 mode, I16 EventType, \
                                        U32 callbackAddr );
                                    

    /*----------------------------------------------------------------------------*/

    I16 __stdcall UD_DIO_1902_Config ( U16 wCardNumber, U16 wPart1Cfg, U16 wPart2Cfg );
    I16 __stdcall UD_DIO_2401_Config ( U16 wCardNumber, U16 wPart1Cfg );
  
    I16 __stdcall UD_DIO_2405_Config ( U16 wCardNumber, U16 wPart1Cfg, U16 wPart2Cfg );
 
    /*----------------------------------------------------------------------------*/
    /* DI Function */

    I16 __stdcall UD_DI_ReadLine ( U16 CardNumber, U16 Port, U16 Line, U16 *State );
    I16 __stdcall UD_DI_ReadPort ( U16 CardNumber, U16 Port, U32 *Value );
    /*----------------------------------------------------------------------------*/
    /* DO Function */

    I16 __stdcall UD_DO_ReadLine ( U16 CardNumber, U16 Port, U16 Line, U16 *Value );
    I16 __stdcall UD_DO_ReadPort ( U16 CardNumber, U16 Port, U32 *Value );
    I16 __stdcall UD_DO_WriteLine ( U16 CardNumber, U16 Port, U16 Line, U16 Value );
    I16 __stdcall UD_DO_WritePort ( U16 CardNumber, U16 Port, U32 Value );
    /*----------------------------------------------------------------------------*/
    /* Timer/Counter Function */
    I16 __stdcall UD_GPTC_Clear ( U16 CardNumber, U16 GCtr );
    I16 __stdcall UD_GPTC_Control ( U16 CardNumber, U16 GCtr, U16 ParamID, U16 Value );
    I16 __stdcall UD_GPTC_Read ( U16 CardNumber, U16 GCtr, U32 *Value );
    I16 __stdcall UD_GPTC_Setup ( U16 CardNumber, U16 GCtr, U16 Mode, U16 SrcCtrl, \
                                  U16 PolCtrl, U32 LReg1_Val, U32 LReg2_Val, U32 PulseCount );
                                  

    I16 __stdcall UD_GPTC_Status ( U16 CardNumber, U16 GCtr, U16 *Value );
    /* Get Event or View Function */
    I16 __stdcall UD_AI_GetEvent ( U16 CardNumber, HANDLE *Event );
    I16 __stdcall UD_AO_GetEvent ( U16 CardNumber, HANDLE *Event );
    
    I16 __stdcall UD_AI_GetView ( U16 CardNumber, U32 *View );
    I16 __stdcall UD_AO_GetView ( U16 CardNumber, U32 *View );
    /*---------------------------------------------------------------------------*/
    /* Common Function */
    I16 __stdcall UD_GetActualRate ( U16 CardNumber, F64 SampleRate, F64 *ActualRate );
    I16 __stdcall UD_GetCardIndexFromID ( U16 CardNumber, U16 *cardType, U16 *cardIndex );
    I16 __stdcall UD_GetCardType ( U16 CardNumber, U16 *cardType );
    I16 __stdcall UD_IdentifyLED_Control ( U16 wCardNumber, U8  bEnable ); // 1: enable , 0: disable LED flash
    /*---------------------------------------------------------------------------*/
    /* Misc. Functions */
    I16 __stdcall UD_Read_ColdJunc_Thermo ( U16 wCardNumber, F64 *pfValue  );
    I16 __stdcall usbdaq_1902_Calibration_All ( U16 wCardNumber, U16 *pCalOp, U16 *pCalSrc );
    
    
    /*----------------------------------------------------------------------------*/    
    I16 __stdcall UD_CTR_Control ( U16 wCardNumber, U16 wCtr, U32 dwCtrl);
    I16 __stdcall UD_CTR_ReadFrequency ( U16 wCardNumber, U16 wCtr, F64 *pfValue );
    I16 __stdcall UD_CTR_ReadRisingEdgeCounter ( U16 wCardNumber, U16 wCtr, U32 *dwValue );
    I16 __stdcall UD_CTR_SetupMinPulseWidth ( U16 wCardNumber, U16 wCtr, U16 wValue );
    I16 __stdcall UD_DI_GetCOSLatchData32 ( U16 wCardNumber, U16 wPort, U32 *pwCosLData );
    I16 __stdcall UD_DI_SetupMinPulseWidth ( U16 wCardNumber, U16 wValue );
    I16 __stdcall UD_DI_Control ( U16 wCardNumber, U16 wPort, U32 dwCtrl );
    I16 __stdcall UD_DI_SetCOSInterrupt32 ( U16 wCardNumber, U16 wPort, U32 dwCtrl, HANDLE *hEvent, BOOLEAN ManualReset );
    I16 __stdcall UD_DO_GetInitPattern (U16 wCardNumber, U16 wPort, U32 *pdwPattern);
    I16 __stdcall UD_DO_SetInitPattern (U16 wCardNumber, U16 wPort, U32 *pdwPattern);
    I16 __stdcall UD_DIO_INT_EventMessage (U16 wCardNumber, I16 mode, HANDLE evt, HWND windowHandle, U32 message, void (__stdcall*callbackAddr)(void));
    I16 __stdcall usbdaq_1902_RefVol_ReadEeprom ( U16 wCardNumber, DOUBLE *RefVol, WORD *wTrimmer );
    I16 __stdcall usbdaq_1902_RefVol_WriteEeprom ( U16 wCardNumber, DOUBLE *RefVol, WORD wTrimmer );
    I16 __stdcall usbdaq_1902_CalSrc_Switch ( U16 wCardNumber, WORD wOperation, WORD wCalSrc );
    /* internal use only, USB-1903 Calibration */
    I16 __stdcall usbdaq_1903_Calibration_All ( U16 wCardNumber, DOUBLE RefVol_10V, U16 *pCalOp, U16 *pCalSrc );
    I16 __stdcall usbdaq_1903_Current_Calibration ( U16 wCardNumber, WORD wOperation, WORD wCalChan, double fRefCur, DWORD *pCalReg );
    I16 __stdcall usbdaq_1903_WriteEeprom ( U16 wCardNumber, WORD wTrimmer, U8 *CALdata );
    /*-------------------------- Internal Use --------------------------*/
    I16 __stdcall UD_GetFPGAVersion ( U16 wCardNumber, U32 *pdwFPGAVersion );
    I16 __stdcall UD_1902_Trimmer_Set ( U16 wCardNumber, UCHAR bValue );
    /*----------------------------------------------------------------------------*/

    I16 __stdcall usbdaq_ReadPort ( U16 CardNumber, U16 wPortAddr, U32 *pdwData );