USB DAQ/USB-1901/VB 6.0/[VB6]USB1901_AI_DB_DMA/usbdask.bas


'AO Functions
Declare Function UD_AO_1902_Config Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal ConfigCtrl As Integer, ByVal TrigCtrl As Integer, ByVal ReTrgCnt As Long, ByVal DLY1Cnt As Long, ByVal DLY2Cnt As Long) As Integer
Declare Function UD_AO_AsyncCheck Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, Stopped As Byte, AccessCnt As Long) As Integer
Declare Function UD_AO_AsyncClear Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, AccessCnt As Long, ByVal stop_mode As Integer) As Integer
Declare Function UD_AO_AsyncDblBufferHalfReady Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, HalfReady As Byte) As Integer
Declare Function UD_AO_AsyncDblBufferMode Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Enable As Byte, ByVal bEnFifoMode As Byte) As Integer
Declare Function UD_AO_ContBufferCompose Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal TotalChnCount As Integer, ByVal ChnNum As Integer, ByVal UpdateCount As Long, ConBuffer As Any, Buffer As Any) As Integer
Declare Function UD_AO_AsyncDblBufferTransfer Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal wBufferID As Integer, Buffer As Integer) As Integer
Declare Function UD_AO_ContWriteChannel Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Channel As Integer, ByVal BufId As Integer, ByVal WriteCount As Long, ByVal Iterations As Long, ByVal CHUI As Long, ByVal definite As Integer, ByVal SyncMode As Integer) As Integer
Declare Function UD_AO_ContWriteMultiChannels Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal NumChans As Integer, Chans As Integer, ByVal BufId As Integer, ByVal WriteCount As Long, ByVal Iterations As Long, ByVal CHUI As Long, ByVal definite As Integer, ByVal SyncMode As Integer) As Integer
Declare Function UD_AO_EventCallBack Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Mode As Integer, ByVal EventType As Integer, ByVal callbackAddr As Long) As Integer
Declare Function UD_AO_InitialMemoryAllocated Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, MemSize As Long) As Integer
Declare Function UD_AO_SetTimeOut Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal TimeOut As Long) As Integer
Declare Function UD_AO_VoltScale Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Channel As Integer, ByVal Voltage As Double, binValue As Integer) As Integer
Declare Function UD_AO_VWriteChannel Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Channel As Integer, ByVal Voltage As Double) As Integer
Declare Function UD_AO_WriteChannel Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Channel As Integer, ByVal Value As Integer) As Integer

'DIO Configuration Functions
Declare Function UD_DIO_1902_Config Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal wPart1Cfg As Integer, ByVal wPart2Cfg As Integer) As Integer
Declare Function UD_DIO_2401_Config Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal wPart1Cfg As Integer) As Integer
' 2012Oct18, Jeff added for USB-2405
Declare Function UD_DIO_2405_Config Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal wPart1Cfg As Integer, ByVal wPart2Cfg As Integer) As Integer

'DI Functions
Declare Function UD_DI_ReadPort Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Port As Integer, Value As Long) As Integer
Declare Function UD_DI_ReadLine Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Port As Integer, ByVal LLine As Integer, Value As Integer) As Integer

'DO Functions
Declare Function UD_DO_ReadLine Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Port As Integer, ByVal LLine As Integer, Value As Integer) As Integer
Declare Function UD_DO_ReadPort Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Port As Integer, Value As Long) As Integer
Declare Function UD_DO_WriteLine Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Port As Integer, ByVal LLine As Integer, ByVal Value As Integer) As Integer
Declare Function UD_DO_WritePort Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Port As Integer, ByVal Value As Long) As Integer


'Timer/Counter Function
Declare Function UD_GPTC_Clear Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal GCtr As Integer) As Integer
Declare Function UD_GPTC_Control Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal GCtr As Integer, ByVal ParamID As Integer, ByVal Value As Integer) As Integer
Declare Function UD_GPTC_Read Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal GCtr As Integer, Value As Long) As Integer
Declare Function UD_GPTC_Setup Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal GCtr As Integer, ByVal Mode As Integer, ByVal SrcCtrl As Integer, ByVal PolCtrl As Integer, ByVal LReg1_Val As Long, ByVal LReg2_Val As Long, ByVal PulseCount As Long) As Integer
Declare Function UD_GPTC_Status Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal GCtr As Integer, Value As Integer) As Integer

'Get Event or View Functions
Declare Function UD_AI_GetEvent Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, hEvent As Object) As Integer
Declare Function UD_AO_GetEvent Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, hEvent As Object) As Integer
Declare Function UD_AI_GetView Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, View As Long) As Integer
Declare Function UD_AO_GetView Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, View As Long) As Integer

'Common Functions
Declare Function UD_GetActualRate Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal SampleRate As Double, ActualRate As Double) As Integer
Declare Function UD_GetCardIndexFromID Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, cardType As Integer, cardIndex As Integer) As Integer
Declare Function UD_GetCardType Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, cardType As Integer) As Integer
Declare Function UD_IdentifyLED_Control Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal bEnable As Byte) As Integer


'---------------------------------------------------------------------------

Declare Function UD_GetFPGAVersion Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByRef pdwFPGAVersion As Long) As Integer

Declare Function UD_1902_Trimmer_Set Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal bValue As Byte) As Integer

Declare Function usbdaq_1902_RefVol_WriteEeprom Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByRef RefVol As Double, ByVal wTrimmer As Integer) As Integer

Declare Function usbdaq_1902_RefVol_ReadEeprom Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByRef RefVol As Double, ByRef wTrimmer As Integer) As Integer

Declare Function usbdaq_1902_CalSrc_Switch Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal wOperation As Integer, ByVal wCalSrc As Integer) As Integer

Declare Function usbdaq_1902_Calibration_All Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByRef pCalOp As Integer, ByRef pCalSrc As Integer) As Integer

Declare Function usbdaq_1903_Calibration_All Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal RefVol_10V As Double, ByRef pCalOp As Integer, ByRef pCalSrc As Integer) As Integer

Declare Function usbdaq_1903_Current_Calibration Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal wOperation As Integer, ByVal wCalChan As Integer, ByVal fRefCur As Double, ByRef pCalReg As Integer) As Integer

Declare Function usbdaq_1903_WriteEeprom Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal wTrimmer As Integer, ByRef CALdata As Byte) As Integer

Declare Function usbdaq_ReadPort Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal wPortAddr As Integer, ByRef pdwData As Long) As Integer

Declare Function UD_Read_ColdJunc_Thermo Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByRef pfValue As Double) As Integer

Declare Function ADC_to_Thermo Lib "Usb-Dask.dll" (ByVal wThermoType As Integer, ByVal fScaledADC As Double, ByVal fColdJuncTemp As Double, ByRef pfTemp As Double) As Integer

Declare Function UD_AI_2401_Stop_Poll Lib "Usb-Dask.dll" (ByVal wCardNumber As Integer) As Integer

'For USB-1900 Series
Declare Function UD_AI_AsyncBufferTransfer Lib "Usb-Dask.dll" (ByVal wCardNumber As Integer, ByRef pwBuffer As Integer, ByVal offset As Long, ByVal count As Long) As Integer

'For USB-7250 As, USB-7230
Declare Function UD_CTR_Control Lib "Usb-Dask.dll" (ByVal wCardNumber As Integer, ByVal wCtr As Integer, ByVal dwCtrl As Long) As Integer

Declare Function UD_CTR_ReadFrequency Lib "Usb-Dask.dll" (ByVal wCardNumber As Integer, ByVal wCtr As Integer, ByRef pfValue As Double) As Integer

Declare Function UD_CTR_ReadRisingEdgeCounter Lib "Usb-Dask.dll" (ByVal wCardNumber As Integer, ByVal wCtr As Integer, ByRef dwValue As Long) As Integer

Declare Function UD_CTR_SetupMinPulseWidth Lib "Usb-Dask.dll" (ByVal wCardNumber As Integer, ByVal wCtr As Integer, ByVal Value As Integer) As Integer

Declare Function UD_DI_SetupMinPulseWidth Lib "Usb-Dask.dll" (ByVal wCardNumber As Integer, ByVal Value As Integer) As Integer

Declare Function UD_DI_Control Lib "Usb-Dask.dll" (ByVal wCardNumber As Integer, ByVal wPort As Integer, ByVal dwCtrl As Long) As Integer

Declare Function UD_DI_SetCOSInterrupt32 Lib "Usb-Dask.dll" (ByVal wCardNumber As Integer, ByVal wPort As Integer, ByVal dwCtrl As Integer, ByRef hEvent As Long, ByVal ManualReset As Boolean) As Integer

Declare Function UD_DI_GetCOSLatchData32 Lib "Usb-Dask.dll" (ByVal wCardNumber As Integer, ByVal wPort As Integer, ByRef pwCosLData As Long) As Integer

Declare Function UD_DIO_INT_EventMessage Lib "Usb-Dask.dll" (ByVal wCardNumber As Integer, ByVal Mode As Integer, ByVal evt As Object, ByVal windowHandle As Object, ByVal message As Long, ByVal callbackAddr As Long) As Integer

Declare Function UD_DO_GetInitPattern Lib "Usb-Dask.dll" (ByVal wCardNumber As Integer, ByVal wPort As Integer, ByRef pdwPattern As Long) As Integer

Declare Function UD_DO_SetInitPattern Lib "Usb-Dask.dll" (ByVal wCardNumber As Integer, ByVal wPort As Integer, ByRef pdwPattern As Long) As Integer

